# stapi

./: CMakeLists.txt
doc/: CMakeLists.txt  conf.py.in
libstapi/: CMakeLists.txt
libstapi/include/libstapi/: libstapi.h
libstapi/src/: library_main.cpp
libstapi_test/: CMakeLists.txt
libstapi_test/src/: test1.cpp
stapiapp/: CMakeLists.txt
stapiapp/src/: main.cpp
